# libcoil-dev

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION.md  ISA.md  Makefile  README.md  meson.build  meson_options.txt
cmake/: coil-config.cmake.in
csrc/: arena.c  instr.c
docs/: README.md  error_handling.md  instruction_set.md  object_format.md
example/: main.cpp
examples/: object_reader.cpp  simple_example.cpp
include/: coil.h
include/ccoil/: err.hpp
include/coil/: arena.h  args.h  args.hpp  base.h  binary_format.h  binary_utils.h  builder.hpp  coil.h  coil.hpp  deps.h  encoding.hpp  err.h  err.hpp  error_codes.h  file.h  instr.h  instr.hpp  instruction_set.h  linker.h  log.h  log.hpp  mem.h  mem.hpp  memory.h  obj.h  obj.hpp  object_file.h  op.hpp  sect.h  section.h  stream.h  stream.hpp  thread.h  thread.hpp  type.hpp  type_system.h  types.h  types.hpp  validation.h  variable_system.h
include/coil/utils/: binary_utils.h  validation.h
src/: arena.c  args.c  args.cpp  binary_format.cpp  coil.c  coil.cpp  encoding.cpp  err.c  err.cpp  error_codes.cpp  file.c  instr.c  instr.cpp  instruction_set.cpp  log.c  log.cpp  mem.c  mem.cpp  memory.c  obj.c  obj.cpp  sect.c  section.c  srcdeps.h  stream.c  stream.cpp  thread.c  thread.cpp  type_system.cpp  variable_system.cpp
src/binary/: binary_format.cpp
src/linker/: linker.cpp
src/object/: object_format.cpp
src/types/: matrix_types.cpp  tensor_types.cpp  type_system.cpp
src/util/: endian.cpp  endian.h
src/utils/: binary_utils.cpp  validation.cpp
test/: meson.build  test_arena.c  test_coil.c  test_error.c  test_framework.c  test_framework.h  test_instr.c  test_main.c  test_obj.c
tests/: CMakeLists.txt  binary_format_test.cpp  coil_test.c  error_system_test.cpp  instruction_set_test.cpp  integration_test.cpp  meson.build  simple_test.cpp  test_arena.c  test_args.cpp  test_coil.c  test_coil.cpp  test_err.c  test_err.cpp  test_file.c  test_helper.h  test_instr.c  test_instr.cpp  test_integration.c  test_log.c  test_log.cpp  test_main.c  test_mem.c  test_mem.cpp  test_mmap.c  test_obj.c  test_obj.cpp  test_object.c  test_section.c  test_stream.cpp  test_thread.cpp  test_version.cpp  type_system_test.cpp  validation_test.cpp  variable_system_test.cpp
