option('build_tests', type : 'boolean', value : true, description : 'Build COIL tests')
option('enable_debug', type : 'boolean', value : true, description : 'Enable debug mode')
option('test_coverage', type : 'boolean', value : false, description : 'Enable test coverage')
option('test_verbosity', type : 'boolean', value : false, description : 'Enable verbose test output')